Canta 0.2-beta7

* duration of the song gets displayed behind the position [ pos / duration ]
* improved song result system:
 - passed/hitted points gets collected seperatly
 - points get collected/displayed type specific
 - bonus points count double
 - you get now a school-like score: a+/a/b/c/d/e/f
* remove old pyaudio input code
* improved internal structure in menu-code
* adds directory entry to the songbrowser you can walk now through a directory structure in songs
* refactored microphon input processing and visualisation see commit 1421a6b for more info

Canta 0.2-beta6

* easy automatic generation of note-textures for the songs inside the songeditor
* generation of sheet music of only the current line (on-the-fly), thats
faster than always for the hole song
with change in the songeditor
* code improvements
* remove rpm/deb build system from the project repository
* small utrastar parse fixes
* songs/themes can be downloaded all in one archive
* songs/themes are now seperated in another repository


Canta 0.2-beta5

* add some resolutions for netbooks
* better configfile-format (cleartext readable/editable)
* better textparser-code, canta now parses most files the right way
* support for relative ultrastar files
* new DummyPlayer for sound-output
* new gstreamer (microphon-)input code
* Adding Gstreamer player
	- no more crashes with buggy mp3 files
	- wider media-support (wma, ogg, flac...)
	- no more acoustic noise one some machines
* Gstreamer is now default player and input for canta
* Add support for MP3, FLAC and other formats to Canta Song Generator
* hide optional sound_modules which are not installed
* change default theme in config to silver

Canta 0.2-beta4
* new Canta Song Generator which can make a skelet for a new song, with and
without a midi file
* Support for different languages
* accepting all options without manual restart of canta
* faster config file parsing/generation -> faster start of canta